# openbot-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: version-0.0.2.md
scripts/: check_version.py
src/openbot_sdk/: __init__.py  _bench.py  _client.py  _data.py  _data_job.py  _errors.py  _run.py  _version.py  _webhooks.py
src/openbotai/: __init__.py  _bench.py  _client.py  _errors.py  _run.py  _webhooks.py
tests/: test_bench.py  test_client.py  test_data.py  test_version.py  test_webhooks.py
