[project]
name = "openbot-sdk"
version = "0.1.0"
description = "Python SDK for OpenBot.ai — robot policy evaluation, data curation, and synthetic training data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "OpenBot.ai", email = "hello@openbot.ai" }
]
keywords = [
  "OpenBot.ai",
  "robot data",
  "robot policy evaluation",
  "embodied AI",
  "VLA",
  "teleoperation data",
  "robot learning",
  "sim-to-real",
  "failure replay",
  "robotics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.0.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.22.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "twine>=6.2.0",
]

[project.urls]
Homepage = "https://openbot.ai"
Documentation = "https://openbot.ai/api/docs"
Repository = "https://github.com/openbotai/openbot-sdk"
Issues = "https://github.com/openbotai/openbot-sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openbot_sdk"]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/CHANGELOG.md",
  "/src",
  "/tests",
  "/pyproject.toml",
]
exclude = [
  "**/__pycache__",
  "**/*.pyc",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
